Add test for customer service