@@ -15,19 +15,26 @@ val AkkaHttpVersion = "10.6.2"
 // sbt tasks, consider https://github.com/spray/sbt-revolver/
 fork := true
 
+javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+
 libraryDependencies ++= Seq(
   "com.typesafe.akka" %% "akka-actor-typed" % akkaVersion,
   "ch.qos.logback" % "logback-classic" % "1.2.13",
-  "com.typesafe.akka" %% "akka-actor-testkit-typed" % akkaVersion % Test,
-  "org.scalatest" %% "scalatest" % "3.2.15" % Test,
   "com.typesafe.akka" %% "akka-actor-typed" % akkaVersion,
   "com.typesafe.akka" %% "akka-stream" % akkaVersion,
   "com.typesafe.akka" %% "akka-http" % AkkaHttpVersion,
-  "com.typesafe.slick" %% "slick" % "3.5.1",
- "com.typesafe.akka" %% "akka-http-spray-json" % AkkaHttpVersion
+  "com.typesafe.akka" %% "akka-http-spray-json" % AkkaHttpVersion,
+  "mysql" % "mysql-connector-java" % "8.0.33",
+
+
+  "com.typesafe.akka" %% "akka-actor-testkit-typed" % akkaVersion % Test,
+  "org.scalatestplus" %% "mockito-3-4" % "3.2.10.0" % "test",
+  "org.scalatest" %% "scalatest-funsuite" % "3.2.18" % "test",
+  "org.mockito" % "mockito-all" % "1.8.4"
 )
 
 libraryDependencies ++= Seq(
-  "org.scalikejdbc" %% "scalikejdbc"       % "4.2.1",
-  "com.h2database"  %  "h2"                % "1.4.200"
+  "org.scalikejdbc" %% "scalikejdbc" % "4.2.1",
+  "org.scalikejdbc" %% "scalikejdbc-config" % "4.2.1",
+  "com.h2database" % "h2" % "1.4.200"
 )
